Changelog for tagLister.

tagLister 1.0.2
===============
- Added all, allTpl, and allText properties to tagLister snippet for listing an 'All Tags' result
- Fixed bug in getResourcesTag snippet with tagRequestParam variable
- Changed tolinks &key to &tagRequestParam (with backwards compat)
- i18n of snippet properties
- Added tagKey and tagRequestParam properties to getResourcesTag snippet
- Fixed bug in tolinks snippet

tagLister 1.0.1
===============
- Added outputSeparator property to taglister

tagLister 1.0.0
===============
- Added toPlaceholder property to tolinks
- Added tpl, cls properties to tolinks
- Added tolinks and getResourcesTag snippets
- Fixed altCls parameter issue
- Added includeDeleted, includeUnpublished, and tagVar properties
- Initial commit.