@@ -46,6 +46,8 @@ $_lang['prop_taglister.tagvar_desc'] = 'The REQUEST var to use in the links gene
 $_lang['prop_taglister.sortby_desc'] = 'Field to sort by. Defaults to count. Can be either tag or count.';
 $_lang['prop_taglister.sortdir_desc'] = 'Order which to sort by. Defaults to ASC.';
 $_lang['prop_taglister.limit_desc'] = 'Limits the number of resources returned. Defaults to 10.';
+$_lang['prop_taglister.parents_desc'] = 'Optional. Comma-delimited list of ids serving as parents.';
+$_lang['prop_taglister.depth_desc'] = 'Integer value indicating depth to search for resources from each parent. Defaults to 10.';
 $_lang['prop_taglister.includedeleted_desc'] = 'Include tags from deleted Resources in the results.';
 $_lang['prop_taglister.includeunpublished_desc'] = 'Include tags from unpublished Resources in the results.';
 $_lang['prop_taglister.cls_desc'] = 'A CSS class to add to each row.';
